--- a/scss/header.scss
+++ b/scss/header.scss
@@ -127,7 +127,7 @@ h2{
 
 .btn_red{
     background-color: none;
-    background-image: url(../img/btn-red.png);
+    background-image: url(img/btn-red.png);
     background-position: top center;
     background-repeat: no-repeat;
     color: #ec1244;
@@ -138,7 +138,7 @@ h2{
     position: relative;
     overflow: hidden;
     padding: 40px 0 210px;
-    background-image: url(../img/sec_01-bg_layer--2.png);
+    background-image: url(img/sec_01-bg_layer--2.png);
     background-position: bottom  center;
     background-repeat: no-repeat;
     .container{
@@ -152,7 +152,7 @@ h2{
         height: 100%;
         left: 0px;
         top: 0px;
-        background: url(../img/sec_01-bg_layer--1.png) bottom center no-repeat;
+        background: url(img/sec_01-bg_layer--1.png) bottom center no-repeat;
         z-index: 20;
     }
     
@@ -171,7 +171,7 @@ h2{
             height: 63px;
             right: 160px;
             top: 170px;
-            background: url(../img/slash.png) center no-repeat;
+            background: url(img/slash.png) center no-repeat;
         }
     }
     .top{
@@ -243,7 +243,7 @@ h2{
     text-transform: uppercase;
     left: -1px;
     text-shadow: -1px 0 red;
-    background-image: url(../img/sec_01-bg_layer--2.png);
+    background-image: url(img/sec_01-bg_layer--2.png);
     background-repeat: no-repeat;
     background-position: bottom 76px center;
 
@@ -262,7 +262,7 @@ h2{
     text-transform: uppercase;
     left:  1px;
     text-shadow: -1px 0 green;
-    background-image: url(../img/sec_01-bg_layer--2.png);
+    background-image: url(img/sec_01-bg_layer--2.png);
     background-repeat: no-repeat;
     background-position: bottom 76px center;
 
@@ -814,7 +814,7 @@ h2{
 @media (min-width: 768px) and (max-width: 991px){
   .glitch{display: none;}
   #sec_01{
-    background-image: url(../img/sec_01-bg.jpg);
+    background-image: url(img/sec_01-bg.jpg);
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -886,7 +886,7 @@ h2{
 @media (max-width: 767px) {
     .glitch{display: none;}
     #sec_01{
-      background-image: url(../img/sec_01-bg.jpg);
+      background-image: url(img/sec_01-bg.jpg);
       background-position: bottom center;
       background-repeat: no-repeat;
       background-size: contain;
@@ -912,7 +912,7 @@ h2{
 
 @media (max-width: 480px) {
     #sec_01{
-        background-image: url(../img/sec_01-bg-mob.jpg);
+        background-image: url(img/sec_01-bg-mob.jpg);
         padding-bottom: 130px;
         .top{
             .phones_box{text-align: right; margin-top: -20px;}
@@ -929,6 +929,6 @@ h2{
 
 @media (max-width: 480px) {
     #sec_01{
-        background-image: url(../img/mob-1.png);
+        background-image: url(img/mob-1.png);
     }
 }
